convex hull seed work

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 <script src="js/lib/underscore-min.js"></script>
 <script src="js/lib/three.min.js"></script>
 <script src="js/lib/js/controls/OrbitControls.js"></script>
+<script src="js/lib/js/geometries/ConvexGeometry.js"></script>
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
