added capability to move backwards through the flow

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <div class="main-text">
         <h1>The Relationship between Delauney Triangulations, Voronoi diagrams, and 3D Convex Hulls</h1>
         <p id="description" class="lead"></p>
+        <button id="back" class="btn btn-default" type="submit">Back</button>
         <button id="next" class="btn btn-default" type="submit">Next</button>
     </div>
     <div id="viz">
