--- a/src/index.html
+++ b/src/index.html
@@ -26,23 +26,36 @@
             <a class="navbar-brand" href="#">Computational Geometry</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <a id="back" class="btn btn-default form-control" title="back">
+                        <span class="glyphicon glyphicon-triangle-left"></span>
+                    </a>
+                    <a id="next" class="btn btn-default form-control" title="next">
+                        <span class="glyphicon glyphicon-triangle-right"></span>
+                    </a>
+                    <a id="camera_reset" class="btn btn-default form-control" title="reset camera">
+                        <span class="glyphicon glyphicon-camera"></span>
+                    </a>
+
+
+                </div>
+            </form>
+
+
         </div><!--/.nav-collapse -->
+
     </div>
 </nav>
 
 <div class="container">
 
-    <div class="main-text">
+    <div class="main-text row">
         <h1>The Relationship between Delauney Triangulations, Voronoi diagrams, and 3D Convex Hulls</h1>
         <p id="description" class="lead"></p>
-        <button id="back" class="btn btn-default" type="submit">Back</button>
-        <button id="next" class="btn btn-default" type="submit">Next</button>
+
     </div>
-    <div id="viz">
+    <div id="viz" class="row">
     </div>
 </div>
 
